# wgpu-shapes

./: Cargo.toml  README.md
examples/: display_simple_shapes.rs  many_shapes.rs  move_frame.rs
resources/: shader.wgsl  shape_shader.wgsl  texture_shader.wgsl
src/: depth_buffer.rs  instance.rs  lib.rs  oval.rs  rect.rs  shape_renderer.rs  shapes.rs  texture.rs  vertex.rs
src/render/: depth_buffer.rs  instance.rs  mod.rs  shape_renderer.rs
src/shape/: image.rs  mod.rs  oval.rs  rect.rs  shapes.rs
