[package]
name = "wgpu-shapes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.14.2"
bytemuck = { version = "1.13.0", features = [ "derive" ] }
wgpu-noboiler = "0.1.5"
image = "0.24.5"
rectangle-pack = "0.4.2"

[dev-dependencies]
winit = "0.27.5"
