[package]
name = "wgpu-shapes"
version = "0.2.1"
authors = ["ToBinio"]
edition = "2021"
license = "MIT"
description = "simple shape renderer for wgpu"
categories = ["graphics"]
exclude = ["/.idea"]
repository = "https://github.com/ToBinio/wgpu-shapes"
keywords = ["graphics", "wgpu"]

[dependencies]
wgpu = "0.15.0"
bytemuck = { version = "1.13.0", features = [ "derive" ] }
wgpu-noboiler = "0.2.0"
image = "0.24.5"
rectangle-pack = "0.4.2"

[dev-dependencies]
rand = "0.8.5"
winit = "0.27.5"
